--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "backbone": "^1.2.1",
     "browserify": "^11.0.1",
     "d3": "^3.5.6",
+    "jquery": "^2.1.4",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
