--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "backbone": "^1.2.1",
     "browserify": "^11.0.1",
     "d3": "^3.5.6",
-    "handlebars": "^4.0.1",
+    "handlebars": "^4.0.2",
     "jquery": "^2.1.4",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "zurb-foundation-npm": "0.0.1"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
